# Sales-anomaly-analysis

./: .gitignore  README.md  pyproject.toml
src/: eda_preprocessing_clean.ipynb  modeling_clean.ipynb
